common-applications/test-environment/merlin/uptime-kuma/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: uptime-kuma
  name: uptime-kuma
