common-applications/test-environment/merlin/uptime-kuma/uptime-kuma-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma-deployment
  namespace: merlin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      securityContext:
        seccompProfile:
          type: Localhost
          localhostProfile: infra-seccomp.json
      automountServiceAccountToken: false
      containers:
      - image: swr.cn-north-4.myhuaweicloud.com/opensourceway/uptime-kuma:master-e1083f
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 3001
          timeoutSeconds: 5
        name: uptime-kuma
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 3001
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 1000m
            memory: 1000Mi
          requests:
            cpu: 500m
            memory: 500Mi
        volumeMounts:
        - mountPath: /app/data
          name: container-mountpath-0
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 1000
          capabilities:
            drop:
              - ALL
      volumes:
      - name: container-mountpath-0
        persistentVolumeClaim:
          claimName: uptime-kuma-pvc-0
