common-applications/test-environment/merlin/uptime-kuma/uptime-kuma-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-service
  namespace: merlin
spec:
  ports:
  - name: http-port
    port: 80
    protocol: TCP
    targetPort: 3001
  selector:
    app: uptime-kuma
  type: ClusterIP
