common-applications/test-environment/merlin/uptime-kuma/uptime-kuma-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma-ingress
  namespace: uptime-kuma
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - status-modelers.test.osinfra.cn
    secretName: uptime-kuma-tls
  rules:
  - host: status-modelers.test.osinfra.cn
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: uptime-kuma-service
            port:
              number: 80
      - path: /(.*)\.(jso|svg)
        backend:
          service:
            name: uptime-kuma-service
            port:
              number: 80
      - path: /assets
        pathType: Prefix
        backend:
          service:
            name: uptime-kuma-service
            port:
              number: 80
  ingressClassName: nginx
